# pcap-flow-splitter

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Config.h  Flow.h  FlowId.h  FlowManager.cpp  FlowManager.h  Packet.h  Parser.cpp  Parser.h  main.cpp
src/emitter/: Emitter.h  StdOutEmitter.cpp  StdOutEmitter.h
